fix cfp mobile spacing

--- a/ui/cfp-button.module.scss
+++ b/ui/cfp-button.module.scss
@@ -10,7 +10,6 @@
 
     width: 12em;
     height: 2em;
-    margin: 1rem;
 
     background-color: var(--secondary-dark);
     border-radius: 60px;
@@ -19,5 +18,11 @@
     font-size: 1.7rem;
     font-family: var(--font-shrikhand);
     text-decoration: none;
+
+    margin: 2rem;
+
+    @media only screen and (min-width: 768px) {
+      margin: 1rem;
+    }
   }
 }
